Fix styling of WordPress editor close icon (from default WordPress icon, to my logo black on black, to my logo visible)

--- a/style.css
+++ b/style.css
@@ -103,20 +103,22 @@ a:hover {
 
 
 /* size and background for site logo */
+.edit-post-fullscreen-mode-close.components-button {
+    background-color: var(--wp--preset--color--base);
+}
 .edit-post-fullscreen-mode-close.components-button .edit-post-fullscreen-mode-close_site-icon {
     border-radius: 2px;
-    height: 36px;
-    margin-top: -1px;
+    height: 45px;
+    margin-top: 0;
     object-fit: contain;
-    width: 36px;
-    background-color: var(--wp--preset--color--base);
-    padding: 2px;
+    width: 45px;
+        padding: 2px;
 }
 .edit-post-fullscreen-mode-close.components-button:before {
     border-radius: 4px;
     /* box-shadow: inset 0 0 0 var(--wp-admin-border-width-focus) #1e1e1e; */
     box-shadow: none;
-    transition: box-shadow .1s ease;
+    transition: none;
 }
 img.edit-site-site-icon__image {
     padding: 3px 5px;
